Pushed my navbar items up top, utilizing a flex display. Look into creating a simple navbar with css.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
       rel="stylesheet">
     </head>
     <body>
-        <div class="navbar">
-            <h5>About</h5>
-            <h5>Store</h5>
-            <h5>Gmail</h5>
-            <h5>Images</h5>
+        <div class="nav-container">
+            <div class="left-set">
+                <h5>About</h5>
+                <h5>Store</h5>
+            </div>
+            <div class="right-set">
+                <h5>Gmail</h5>
+                <h5>Images</h5>
+            </div>
+            
             <span class="material-icons-outlined">
                 apps
                 </span>
