Was able to format the page into what I wanted. Probably not the best practice but it kinda works... lol A LOT of trouble trying to put the icons into the searchbar :(

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <div class="container">
         <div class="top container">
             <div class="left-set">
-                <h5 class="options">About</h5>
-                <h5>Store</h5>
+                <h4>About</h4>
+                <h4>Store</h4>
             </div>
             <div class="right-set">
-                <h5>Gmail</h5>
-                <h5>Images</h5>
+                <h4>Gmail</h4>
+                <h4>Images</h4>
                 <span class="material-icons-outlined">
                     apps
                     </span>
@@ -23,17 +23,21 @@
             
         </div>
         <div class="main-center">
-            <img src="images/Google.png" alt="The Google Logo">
-            <div class="searchbar">
-                <span class="material-icons-outlined">
+            <img class ="image" src="images/Google.png" alt="The Google Logo">
+            <div class="wrapper searchbar">
+                <span class="material-icons-outlined search">
                     search
                     </span>
-                <span class="material-icons-outlined">
+                <input type="text" placeholder="Search Some SHit..">
+                <span class="material-icons-outlined mic">
                         mic
                         </span>
             </div>
-            <button>Google Search</button>
-            <button>I'm Feeling Lucky</button>
+            <div class="searchbar">
+                <button>Google Search</button>
+                <button class="button">I'm Feeling Lucky</button>
+            </div>
+          
         </div>
         <div class="bottoms">
             <div class="left-set">
